Fixed the quote on mobile, it was getting in the way. Position fixed and added some margin on the bottom

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -49,3 +49,7 @@ $completed: #17c700;
     opacity: 1;
   }
 }
+
+.margin-bottom-50 {
+  margin-bottom: 50px;
+}
