--- a/client/src/styles/Quote.scss
+++ b/client/src/styles/Quote.scss
@@ -2,7 +2,7 @@
     border: 1px solid #000;
     border-radius: 20px;
     color: #ddd;
-    position: absolute;
+    position: fixed;
     bottom: 5px;
     background: linear-gradient(90deg, blue, purple);
     padding: 5px;
